feat: ajuste no package,json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon src/"
+    "start:dev": "nodemon src/",
+    "start": "nodemon src/"
   },
   "keywords": [],
   "author": "",
