--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon src/index",
-    "start": "nodemon src/index"
+    "start": "node src/index"
   },
   "keywords": [],
   "author": "",
